--- a/literature.bib
+++ b/literature.bib
@@ -1743,3 +1743,286 @@ The {MD} program can handle rectangular periodic boundary conditions with temper
 	pages = {260--264},
 	file = {ScienceDirect Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/TI7X2UI9/Wang et al. - 1997 - The dependence of hardness on the density of amorp.pdf:application/pdf;ScienceDirect Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/HE96D7A5/S0040609097004045.html:text/html}
 }
+
+@article{gordon_vapor_2001,
+	title = {Vapor Deposition of Metal Oxides and Silicates: Possible Gate Insulators for Future Microelectronics},
+	volume = {13},
+	issn = {0897-4756},
+	shorttitle = {Vapor Deposition of Metal Oxides and Silicates},
+	url = {http://dx.doi.org/10.1021/cm010145k},
+	doi = {10.1021/cm010145k},
+	number = {8},
+	urldate = {2014-11-21},
+	journal = {Chemistry of Materials},
+	author = {Gordon, Roy G. and Becker, Jill and Hausmann, Dennis and Suh, Seigi},
+	month = aug,
+	year = {2001},
+	pages = {2463--2464},
+	file = {ACS Full Text PDF w/ Links:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/QECQ2U2Z/Gordon et al. - 2001 - Vapor Deposition of Metal Oxides and Silicates  P.pdf:application/pdf;ACS Full Text Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/2B2NGH2N/cm010145k.html:text/html}
+}
+
+@article{raaijmakers_low_1994,
+	title = {Low temperature metal-organic chemical vapor deposition of advanced barrier layers for the microelectronics industry},
+	volume = {247},
+	issn = {0040-6090},
+	url = {http://www.sciencedirect.com/science/article/pii/0040609094904790},
+	doi = {10.1016/0040-6090(94)90479-0},
+	abstract = {Metal-organic chemical vapor deposition ({MOCVD}) of {TiN} thin films at low temperatures and low pressures using tetrakis(diethylamino) Ti ({TDEAT}) and {NH}3 is described. Conformal {TiN} films, having layer resistivities of less than 200 μΩcm, densities close to those in sputtered films and low impurity contents can be obtained with this chemistry. These {TiN} films can be applied as adhesion layers for chemically vapor-deposited W, or as barrier layers between Si and Al.
+
+Many papers describe deposition of {TiN} using tetrakis (dimethylamino) Ti ({TDMAT}) and {NH}3 to form {TiN}, presumably because of the conveniently higher vapor pressure of {TDMAT} compared with {TDEAT}. A direct liquid injection system is used here to enable reproducible introduction of both amines in the reactor. A direct comparison between the {TDMAT}{NH}3 and {TDEAT}{NH}3 chemistries and the properties of the resulting films is made. It is found that the more reactive {TDMAT}{NH}3 chemistry produces non-conformal films having a higher resistivity (\&gt;1200 micro ohm cm) and lower density.
+
+finally, {MOCVD} of advanced amorphous barrier materials, comprising a ternary TiSiN alloy, is described. Such amorphous ternary barriers are candidates for application in future Cu metallization schemes.},
+	number = {1},
+	urldate = {2014-11-21},
+	journal = {Thin Solid Films},
+	author = {Raaijmakers, Ivo J.},
+	month = jul,
+	year = {1994},
+	pages = {85--93},
+	file = {ScienceDirect Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/S8C38QZ9/Raaijmakers - 1994 - Low temperature metal-organic chemical vapor depos.pdf:application/pdf;ScienceDirect Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/DAQKU3UA/0040609094904790.html:text/html}
+}
+
+@article{kaloyeros_low-temperature_1990,
+	title = {Low-temperature metal-organic chemical vapor deposition ({LTMOCVD}) of device-quality copper films for microelectronic applications},
+	volume = {19},
+	issn = {0361-5235, 1543-186X},
+	url = {http://link.springer.com/article/10.1007/BF02733818},
+	doi = {10.1007/BF02733818},
+	abstract = {Copper films for potential use in multilevel metallization in {ULSIC}’s were produced by low temperature (250–350° C) metal-organic chemical vapor deposition ({LTMOCVD}) in atmospheres of pure H2 or mixture Ar/H2 from the β-diketonate precursor bis(1,1,1,5,5,5-hexafluoroacetylacetonato) copper(ll), Cu(hfa)2. The films were analyzed by x-ray diffraction ({XRD}), Rutherford backscattering ({RBS}), Auger electron spectroscopy ({AES}), scanning electron microscopy ({SEM}), and energy-dispersive x-ray spectroscopy ({EDXS}). The results of these studies showed that the films were uniform, continuous, adherent and highly pure—oxygen and carbon contents were below the detection limits of {AES}. Four point resistivity measurements showed that the copper films had very low resistivity, as low as 1.9 μΩcm for the films deposited in pure hydrogen atmosphere. Our preliminary results seem to indicate that {LTMOCVD} is a very attractive technique for copper multilevel metallizations.},
+	number = {3},
+	urldate = {2014-11-21},
+	journal = {Journal of Electronic Materials},
+	author = {Kaloyeros, Alain E. and Feng, Aiguo and Garhart, Jonathan and Brooks, Kenneth C. and Ghosh, Sumanta K. and Saxena, Arjun N. and Luehrs, Fred},
+	month = mar,
+	year = {1990},
+	keywords = {Characterization and Evaluation of Materials, Cu films, Electronics and Microelectronics, Instrumentation, {LTMOCVD}, metallization, Optical and Electronic Materials, Solid State Physics and Spectroscopy},
+	pages = {271--276},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/UR2G7WHB/Kaloyeros et al. - 1990 - Low-temperature metal-organic chemical vapor depos.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/M4WTUBCB/BF02733818.html:text/html}
+}
+
+@article{waechtler_copper_2009,
+	title = {Copper Oxide Films Grown by Atomic Layer Deposition from Bis(tri-n-butylphosphane)copper(I)acetylacetonate on Ta, {TaN}, Ru, and {SiO}2},
+	volume = {156},
+	issn = {0013-4651, 1945-7111},
+	url = {http://jes.ecsdl.org/content/156/6/H453},
+	doi = {10.1149/1.3110842},
+	abstract = {The thermal atomic layer deposition ({ALD}) of copper oxide films from the nonfluorinated yet liquid precursor bis(tri-n{\textless}mml:math display="inline"{\textgreater}{\textless}mml:mi{\textgreater}n{\textless}/mml:mi{\textgreater}{\textless}/mml:math{\textgreater} -butylphosphane)copper(I)acetylacetonate, [(Bnu3P)C2u(acac)]{\textless}mml:math display="inline"{\textgreater}{\textless}mml:mrow{\textgreater}{\textless}mml:mo{\textgreater}[{\textless}/mml:mo{\textgreater}{\textless}mml:mrow{\textgreater}{\textless}mml:mo{\textgreater}({\textless}/mml:mo{\textgreater}{\textless}mml:mmultiscripts{\textgreater}{\textless}mml:mi mathvariant="normal"{\textgreater}B{\textless}/mml:mi{\textgreater}{\textless}mml:mprescripts{\textgreater}{\textless}/mml:mprescripts{\textgreater}{\textless}mml:none{\textgreater}{\textless}/mml:none{\textgreater}{\textless}mml:mi{\textgreater}n{\textless}/mml:mi{\textgreater}{\textless}/mml:mmultiscripts{\textgreater}{\textless}mml:msub{\textgreater}{\textless}mml:mi mathvariant="normal"{\textgreater}u{\textless}/mml:mi{\textgreater}{\textless}mml:mrow{\textgreater}{\textless}mml:mn{\textgreater}3{\textless}/mml:mn{\textgreater}{\textless}/mml:mrow{\textgreater}{\textless}/mml:msub{\textgreater}{\textless}mml:mi mathvariant="normal"{\textgreater}P{\textless}/mml:mi{\textgreater}{\textless}mml:mo{\textgreater}){\textless}/mml:mo{\textgreater}{\textless}/mml:mrow{\textgreater}{\textless}/mml:mrow{\textgreater}{\textless}mml:mmultiscripts{\textgreater}{\textless}mml:mi mathvariant="normal"{\textgreater}C{\textless}/mml:mi{\textgreater}{\textless}mml:mprescripts{\textgreater}{\textless}/mml:mprescripts{\textgreater}{\textless}mml:mrow{\textgreater}{\textless}mml:mn{\textgreater}2{\textless}/mml:mn{\textgreater}{\textless}/mml:mrow{\textgreater}{\textless}mml:none{\textgreater}{\textless}/mml:none{\textgreater}{\textless}/mml:mmultiscripts{\textgreater}{\textless}mml:mi mathvariant="normal"{\textgreater}u{\textless}/mml:mi{\textgreater}{\textless}mml:mrow{\textgreater}{\textless}mml:mrow{\textgreater}{\textless}mml:mo{\textgreater}({\textless}/mml:mo{\textgreater}{\textless}mml:mi{\textgreater}acac{\textless}/mml:mi{\textgreater}{\textless}mml:mo{\textgreater}){\textless}/mml:mo{\textgreater}{\textless}/mml:mrow{\textgreater}{\textless}mml:mo{\textgreater}]{\textless}/mml:mo{\textgreater}{\textless}/mml:mrow{\textgreater}{\textless}/mml:math{\textgreater} , and wet O2{\textless}mml:math display="inline"{\textgreater}{\textless}mml:msub{\textgreater}{\textless}mml:mi mathvariant="normal"{\textgreater}O{\textless}/mml:mi{\textgreater}{\textless}mml:mrow{\textgreater}{\textless}mml:mn{\textgreater}2{\textless}/mml:mn{\textgreater}{\textless}/mml:mrow{\textgreater}{\textless}/mml:msub{\textgreater}{\textless}/mml:math{\textgreater} on Ta, {TaN}, Ru, and {SiO}2{\textless}mml:math display="inline"{\textgreater}{\textless}mml:mrow{\textgreater}{\textless}mml:mi mathvariant="normal"{\textgreater}Si{\textless}/mml:mi{\textgreater}{\textless}mml:msub{\textgreater}{\textless}mml:mi mathvariant="normal"{\textgreater}O{\textless}/mml:mi{\textgreater}{\textless}mml:mrow{\textgreater}{\textless}mml:mn{\textgreater}2{\textless}/mml:mn{\textgreater}{\textless}/mml:mrow{\textgreater}{\textless}/mml:msub{\textgreater}{\textless}/mml:mrow{\textgreater}{\textless}/mml:math{\textgreater} substrates at temperatures of {\textless}160°C{\textless}mml:math display="inline"{\textgreater}{\textless}mml:mrow{\textgreater}{\textless}mml:mo{\textgreater}\&lt;{\textless}/mml:mo{\textgreater}{\textless}mml:mn{\textgreater}160{\textless}/mml:mn{\textgreater}{\textless}mml:mo{\textgreater}°{\textless}/mml:mo{\textgreater}{\textless}mml:mi mathvariant="normal"{\textgreater}C{\textless}/mml:mi{\textgreater}{\textless}/mml:mrow{\textgreater}{\textless}/mml:math{\textgreater} is reported. Typical temperature-independent growth was observed at least up to 125°C{\textless}mml:math display="inline"{\textgreater}{\textless}mml:mrow{\textgreater}{\textless}mml:mn{\textgreater}125{\textless}/mml:mn{\textgreater}{\textless}mml:mo{\textgreater}°{\textless}/mml:mo{\textgreater}{\textless}mml:mi mathvariant="normal"{\textgreater}C{\textless}/mml:mi{\textgreater}{\textless}/mml:mrow{\textgreater}{\textless}/mml:math{\textgreater} with a growth-per-cycle of ∼0.1Å{\textless}mml:math display="inline"{\textgreater}{\textless}mml:mrow{\textgreater}{\textless}mml:mo{\textgreater}∼{\textless}/mml:mo{\textgreater}{\textless}mml:mn{\textgreater}0.1{\textless}/mml:mn{\textgreater}{\textless}mml:mspace width="0.3em"{\textgreater}{\textless}/mml:mspace{\textgreater}{\textless}mml:mi mathvariant="normal"{\textgreater}Å{\textless}/mml:mi{\textgreater}{\textless}/mml:mrow{\textgreater}{\textless}/mml:math{\textgreater} for the metallic substrates and an {ALD} window extending down to 100°C{\textless}mml:math display="inline"{\textgreater}{\textless}mml:mrow{\textgreater}{\textless}mml:mn{\textgreater}100{\textless}/mml:mn{\textgreater}{\textless}mml:mo{\textgreater}°{\textless}/mml:mo{\textgreater}{\textless}mml:mi mathvariant="normal"{\textgreater}C{\textless}/mml:mi{\textgreater}{\textless}/mml:mrow{\textgreater}{\textless}/mml:math{\textgreater} for Ru. On {SiO}2{\textless}mml:math display="inline"{\textgreater}{\textless}mml:mrow{\textgreater}{\textless}mml:mi mathvariant="normal"{\textgreater}Si{\textless}/mml:mi{\textgreater}{\textless}mml:msub{\textgreater}{\textless}mml:mi mathvariant="normal"{\textgreater}O{\textless}/mml:mi{\textgreater}{\textless}mml:mrow{\textgreater}{\textless}mml:mn{\textgreater}2{\textless}/mml:mn{\textgreater}{\textless}/mml:mrow{\textgreater}{\textless}/mml:msub{\textgreater}{\textless}/mml:mrow{\textgreater}{\textless}/mml:math{\textgreater} and {TaN}, the {ALD} window was observed between 110 and 125°C{\textless}mml:math display="inline"{\textgreater}{\textless}mml:mrow{\textgreater}{\textless}mml:mn{\textgreater}125{\textless}/mml:mn{\textgreater}{\textless}mml:mo{\textgreater}°{\textless}/mml:mo{\textgreater}{\textless}mml:mi mathvariant="normal"{\textgreater}C{\textless}/mml:mi{\textgreater}{\textless}/mml:mrow{\textgreater}{\textless}/mml:math{\textgreater} , with saturated growth shown on {TaN} still at 135°C{\textless}mml:math display="inline"{\textgreater}{\textless}mml:mrow{\textgreater}{\textless}mml:mn{\textgreater}135{\textless}/mml:mn{\textgreater}{\textless}mml:mo{\textgreater}°{\textless}/mml:mo{\textgreater}{\textless}mml:mi mathvariant="normal"{\textgreater}C{\textless}/mml:mi{\textgreater}{\textless}/mml:mrow{\textgreater}{\textless}/mml:math{\textgreater} . Precursor self-decomposition in a chemical vapor deposition mode led to bimodal growth on Ta, resulting in the parallel formation of continuous films and isolated clusters. This effect was not observed on {TaN} up to ∼130°C{\textless}mml:math display="inline"{\textgreater}{\textless}mml:mrow{\textgreater}{\textless}mml:mo{\textgreater}∼{\textless}/mml:mo{\textgreater}{\textless}mml:mn{\textgreater}130{\textless}/mml:mn{\textgreater}{\textless}mml:mo{\textgreater}°{\textless}/mml:mo{\textgreater}{\textless}mml:mi mathvariant="normal"{\textgreater}C{\textless}/mml:mi{\textgreater}{\textless}/mml:mrow{\textgreater}{\textless}/mml:math{\textgreater} and neither on Ru or {SiO}2{\textless}mml:math display="inline"{\textgreater}{\textless}mml:mrow{\textgreater}{\textless}mml:mi mathvariant="normal"{\textgreater}Si{\textless}/mml:mi{\textgreater}{\textless}mml:msub{\textgreater}{\textless}mml:mi mathvariant="normal"{\textgreater}O{\textless}/mml:mi{\textgreater}{\textless}mml:mrow{\textgreater}{\textless}mml:mn{\textgreater}2{\textless}/mml:mn{\textgreater}{\textless}/mml:mrow{\textgreater}{\textless}/mml:msub{\textgreater}{\textless}/mml:mrow{\textgreater}{\textless}/mml:math{\textgreater} for any processing temperature. The degree of nitridation of the tantalum nitride underlayers considerably influenced the film growth. With excellent adhesion of the {ALD} films on all substrates studied, the results are a promising basis for Cu seed layer {ALD} applicable to electrochemical Cu metallization in interconnects of ultralarge-scale integrated circuits.},
+	number = {6},
+	urldate = {2014-11-21},
+	journal = {Journal of The Electrochemical Society},
+	author = {Waechtler, Thomas and Oswald, Steffen and Roth, Nina and Jakob, Alexander and Lang, Heinrich and Ecke, Ramona and Schulz, Stefan E. and Gessner, Thomas and Moskvinova, Anastasia and Schulze, Steffen and Hietschold, Michael},
+	month = jun,
+	year = {2009},
+	keywords = {adhesion, Atomic layer deposition, chemical vapour deposition, copper compounds, integrated circuit interconnections, integrated circuit metallisation, nitridation, semiconductor growth, semiconductor materials, semiconductor thin films},
+	pages = {H453--H459},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/4TZ33RPJ/Waechtler et al. - 2009 - Copper Oxide Films Grown by Atomic Layer Depositio.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/74KJD3Q5/H453.html:text/html}
+}
+
+@article{waechtler_ald-grown_2011,
+	series = {The 2010 International workshop on “Materials for Advanced Metallization” - {MAM} 2010 The 2010 International workshop on “Materials for Advanced Metallization”},
+	title = {{ALD}-grown seed layers for electrochemical copper deposition integrated with different diffusion barrier systems},
+	volume = {88},
+	issn = {0167-9317},
+	url = {http://www.sciencedirect.com/science/article/pii/S0167931710002364},
+	doi = {10.1016/j.mee.2010.07.004},
+	abstract = {The deposition of Cu seed layers for electrochemical Cu deposition ({ECD}) via atomic layer deposition ({ALD}) of copper oxide and subsequent thermal reduction at temperatures between 110 and 120 °C was studied on different diffusion barrier systems. While optimization of the process is required on {TaN} with respect to reduction and plating, promising results were obtained on blanket {PVD} Ru. The plating results on layers of {ALD} Cu with underlying Ru even outperformed the ones achieved on {PVD} Cu seed layers with respect to morphology and resistivity. Applying the processes to via and line patterns gave similar results, suggesting that a combination of {ALD} Cu with {PVD} or {ALD}-grown Ru could significantly improve the {ECD} Cu growth.},
+	number = {5},
+	urldate = {2014-11-21},
+	journal = {Microelectronic Engineering},
+	author = {Waechtler, Thomas and Ding, Shao-Feng and Hofmann, Lutz and Mothes, Robert and Xie, Qi and Oswald, Steffen and Detavernier, Christophe and Schulz, Stefan E. and Qu, Xin-Ping and Lang, Heinrich and Gessner, Thomas},
+	month = may,
+	year = {2011},
+	keywords = {Atomic layer deposition ({ALD}), Copper, Copper oxide, Electrochemical deposition ({ECD}), Interconnect, Reduction, Ruthenium, Seed layer},
+	pages = {684--689},
+	file = {ScienceDirect Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/X9B5BAKM/Waechtler et al. - 2011 - ALD-grown seed layers for electrochemical copper d.pdf:application/pdf;ScienceDirect Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/IBJ4AJ82/S0167931710002364.html:text/html}
+}
+
+@article{peter_influence_2007,
+	title = {Influence of superparamagnetic regions on the giant magnetoresistance of electrodeposited Co–Cu/Cu multilayers},
+	volume = {312},
+	issn = {0304-8853},
+	url = {http://www.sciencedirect.com/science/article/pii/S0304885306012108},
+	doi = {10.1016/j.jmmm.2006.10.924},
+	abstract = {The room-temperature magnetoresistance ({MR}) of electrodeposited Co–Cu/Cu multilayers was investigated. Samples were prepared on either a polycrystalline Ti foil or on a silicon wafer covered with a Ta buffer and a Cu-seed layer. The field dependence of the magnetoresistance was analyzed by decomposing the {GMR} into ferromagnetic ({FM}) and superparamagnetic ({SPM}) contributions, whereby the field dependence of the latter could be described by a Langevin function. In order to better understand the influence of the deposition conditions on the {GMR} in electrodeposited multilayers, the evolution of the relative importance of the two {GMR} contributions is discussed in terms of the Co dissolution process during the Cu deposition pulse.},
+	number = {2},
+	urldate = {2014-11-21},
+	journal = {Journal of Magnetism and Magnetic Materials},
+	author = {Péter, L. and Weihnacht, V. and Tóth, J. and Pádár, J. and Pogány, L. and Schneider, C. M. and Bakonyi, I.},
+	month = may,
+	year = {2007},
+	keywords = {Electrodeposited multilayers, Giant magnetoresistance ({GMR}), Superparamagnetism ({SPM})},
+	pages = {258--265},
+	file = {ScienceDirect Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/UFEWGPTT/Péter et al. - 2007 - Influence of superparamagnetic regions on the gian.pdf:application/pdf;ScienceDirect Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/VRZ5DUTH/S0304885306012108.html:text/html}
+}
+
+@article{seyama_giant_1999,
+	title = {Giant magnetoresistance properties of {CoFe}/Cu multilayer in the {CPP} (Current Perpendicular to the Plane) geometry},
+	volume = {35},
+	issn = {0018-9464},
+	doi = {10.1109/20.800997},
+	abstract = {The {MR} ratio of multilayer {GMR} sensors with the {CPP} (current perpendicular to the plane) structure is expected to be much larger than that of {CIP} (current in the plane) sensors. We investigated the {GMR} properties of {CIP} and {CPP} elements of a Co0.9Fe0.1/Cu 10-bilayer. For {CPP} elements, the {GMR} film was connected to the top and bottom terminal layers with a micron-sized contact hole. The measured data was analyzed using a model taking into account of the distribution of sense current. The measured resistance change (ł R) increased rapidly as the {GMR} diameter became smaller, and showed close agreement with the calculated results when we assumed the {MR} ratio of {CPP} films to be around 30\%. This {MR} ratio was twice as large as that of the {CIP} film of Co0.9Fe 0.1/Cu 10-bilayer. In this study, we used the {CPP} elements which had wide {GMR} films and fine contact holes. So, the measured saturation field (Hs) of the {CPP} elements was almost constant as a function of the contact hole dimension, because the demagnetization field was insensitive to the sensor size. The {CPP} element in this study will obtain a high output when the {GMR} diameter becomes small},
+	number = {5},
+	journal = {{IEEE} Transactions on Magnetics},
+	author = {Seyama, Y. and Tanaka, A. and Oshiki, M.},
+	month = sep,
+	year = {1999},
+	keywords = {Co0.9Fe0.1-Cu, Co0.9Fe0.1/Cu bilayer, cobalt alloys, {CoFe}/Cu multilayer, Copper, {CPP} geometry, Current measurement, current perpendicular to plane geometry, Data analysis, demagnetisation, demagnetization field, Electrical resistance measurement, ferromagnetic materials, Giant magnetoresistance, Iron, iron alloys, Magnetic field measurement, magnetic multilayers, Magnetic properties, Magnetic sensors, micron-sized contact hole, {MR} ratio, multilayer {GMR} sensors, saturation field, Size measurement},
+	pages = {2838--2840},
+	file = {IEEE Xplore Abstract Record:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/4JQW88PJ/abs_all.html:text/html;IEEE Xplore Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/EN2724SP/Seyama et al. - 1999 - Giant magnetoresistance properties of CoFeCu mult.pdf:application/pdf}
+}
+
+@article{jankowski_subnanometer_1989,
+	title = {Subnanometer multilayers for x-ray mirrors: Amorphous crystals},
+	volume = {65},
+	issn = {0021-8979, 1089-7550},
+	shorttitle = {Subnanometer multilayers for x‐ray mirrors},
+	url = {http://scitation.aip.org/content/aip/journal/jap/65/11/10.1063/1.343288},
+	doi = {10.1063/1.343288},
+	abstract = {The use of ‘‘natural’’ crystals as Bragg diffractors has been supplemented by the advent of artificial composition‐modulated structures, that is, multilayers. The extension of optical systems using soft x rays to hard x rays is now supplemented by the synthesis of subnanometer repeat period multilayers. These structures consist of layering amorphous planes, each an atomic spacing thick, and may therefore be thought of as ‘‘amorphous crystals.’’},
+	number = {11},
+	urldate = {2014-11-21},
+	journal = {Journal of Applied Physics},
+	author = {Jankowski, A. F. and Makowiecki, D. M. and Wall, M. A. and McKernan, M. A.},
+	month = jun,
+	year = {1989},
+	keywords = {crystal structure, Hard X-rays, Multilayers, Soft X-rays, X-ray optics},
+	pages = {4450--4451},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/MC6D7GG3/Jankowski et al. - 1989 - Subnanometer multilayers for x‐ray mirrors Amorph.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/CAWJMVSA/1.html:text/html}
+}
+
+@patent{sun_magnetic_2006,
+	title = {Magnetic tunnel junction element structures and methods for fabricating the same},
+	url = {http://www.google.com/patents/US7098495},
+	abstract = {Magnetic tunnel junction (“{MTJ}”) element structures and methods for fabricating {MTJ} element structures are provided. An {MTJ} element structure may comprise a crystalline pinned layer, an amorphous fixed layer, and a coupling layer disposed between the crystalline pinned layer and the amorphous fixed layer. The amorphous fixed layer is antiferromagnetically coupled to the crystalline pinned layer. The {MTJ} element further comprises a free layer and a tunnel barrier layer disposed between the amorphous fixed layer and the free layer.
+Another {MTJ} element structure may comprise a pinned layer, a fixed layer and a non-magnetic coupling layer disposed therebetween. A tunnel barrier layer is disposed between the fixed layer and a free layer. An interface layer is disposed adjacent the tunnel barrier layer and a layer of amorphous material. The first interface layer comprises a material having a spin polarization that is higher than that of the amorphous material.},
+	nationality = {United States},
+	assignee = {Freescale Semiconducor, Inc.},
+	number = {{US}7098495 B2},
+	urldate = {2014-11-21},
+	author = {Sun, Jijun and Dave, Renu W. and Slaughter, Jon M. and Akerman, Johan},
+	month = aug,
+	year = {2006},
+	note = {U.S. Classification 257/295, 257/489, 257/E43.006, 365/158, 257/E43.004, 257/421; International Classification H01L29/76; Cooperative Classification B82Y25/00, B82Y40/00, H01F10/3272, H01F10/3254, H01L43/12, H01F10/132, H01L43/08, H01F41/303; European Classification B82Y25/00, B82Y40/00, H01L43/12, H01F10/32N6A, H01F41/30D2, H01L43/08},
+	file = {Google Patents PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/65QJPP5V/Sun et al. - 2006 - Magnetic tunnel junction element structures and me.pdf:application/pdf}
+}
+
+@article{mccurdy_successful_1999,
+	title = {Successful implementation methods of atmospheric {CVD} on a glass manufacturing line},
+	volume = {351},
+	issn = {0040-6090},
+	url = {http://www.sciencedirect.com/science/article/pii/S0040609099001996},
+	doi = {10.1016/S0040-6090(99)00199-6},
+	abstract = {Large area thin film coating of glass substrates adds value and performance to the glass that is often unachievable by conventional tinting of the glass composition. Far infra red coatings, applicable for low emittance window glass, have been commercially successful due to their ease of manufacture and enhanced performance compared to uncoated glass. By producing the coated glass by chemical vapor deposition ({CVD}) directly on a float glass manufacturing line, economies of scale and production simplicity are achievable that escape off-line deposition technologies. The critical success factors that make on-line coatings commercially successful, such as float bath compatible, high deposition rate chemistry and flexible reactor design will be discussed. Manufacturing difficulties arise with on-line coatings, however, due to the speed of glass production along with the lack of atmosphere control inherent to the glass making process. Due to the highly thermally activated chemistry of {CVD}, stable substrate temperatures as well as insensitive thin film designs are necessary for high product yields and quality control. By utilizing novel multilayer structures, normal and off angle color can be controlled such that typical production thickness nonuniformities are masked thereby yielding an aesthetically pleasing product. Material and design constraints for on-line low emittance glass, mirror coatings and architectural solar control coated glass produced using these techniques will be described. {CVD} deposition chemistry also is an important factor which is critical to efficient on-line coating processes. Individual thin film growth rates need to be typically greater than 200 Å/s for commercial on-line coatings. High material loading, with gas phase precursor concentrations up to 3–4\%, are often necessary to achieve such growth rates. The {CVD} chemistry must be stable and compatible with the high loading and temperature such that high deposition efficiencies can be achieved without excessive particulate production or gas phase ignition. {CVD} precursor design and vaporization techniques will be described which can satisfy these constraints. With proper choice of precursor and additive chemistry, high deposition efficiency, long runtime and low cost deposition processes can be achieved. When combined with thickness insensitive thin film designs, these chemistries have successfully produced a wide variety of cost-effective on-line coated products.},
+	number = {1–2},
+	urldate = {2014-11-21},
+	journal = {Thin Solid Films},
+	author = {McCurdy, Richard J.},
+	month = aug,
+	year = {1999},
+	keywords = {{CHEMICAL} {VAPOR} {DEPOSITION}, Deposition process, Glass coating, Organometallic vapor deposition},
+	pages = {66--72},
+	file = {ScienceDirect Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/EMZ3DNFC/McCurdy - 1999 - Successful implementation methods of atmospheric C.pdf:application/pdf;ScienceDirect Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/WU4WRD3Z/S0040609099001996.html:text/html}
+}
+
+@article{higashiwaki_algan/gan_2006,
+	title = {{AlGaN}/{GaN} {MIS}-{HFETs} with {fT} of 163 {GHz} using cat-{CVD} {SiN} gate-insulating and passivation Layers},
+	volume = {27},
+	issn = {0741-3106},
+	doi = {10.1109/LED.2005.860884},
+	abstract = {Al/sub 0.4/Ga/sub 0.6/N/{GaN} heterostructure field-effect transistors ({HFETs}) with an {AlGaN} barrier thickness of 8 nm and a gate length (L/sub G/) of 0.06-0.2 μm were fabricated on a sapphire substrate. We employed two novel techniques, which were thin, high-Al-composition {AlGaN} barrier layers and {SiN} gate-insulating, passivation layers formed by catalytic chemical vapor deposition, to enhance high-frequency device characteristics by suppressing the short channel effect. The {HFETs} with L/sub G/=0.06-0.2 μm had a maximum drain current density of 1.17-1.24 A/mm at a gate bias of +1.0 V and a peak extrinsic transconductance of 305-417 {mS}/mm. The current-gain cutoff frequency ({fT}) was 163 {GHz}, which is the highest value to have been reported for {GaN} {HFETs}. The maximum oscillation frequency (fmax) was also high, and its value derived from the maximum stable gain or unilateral gain was 192 or 163 {GHz}, respectively.},
+	number = {1},
+	journal = {{IEEE} Electron Device Letters},
+	author = {Higashiwaki, M. and Matsui, T. and Mimura, T.},
+	month = jan,
+	year = {2006},
+	keywords = {0.06 to 0.2 micron, 8 nm, 163 {GHz}, Al/sub 0.4/Ga/sub 0.6/N-{GaN}, Al/sub 2/O/sub 3/, aluminium compounds, Aluminum gallium nitride, barrier layers, catalytic chemical vapor deposition, Catalytic chemical vapor deposition (Cat-{CVD}), {CHEMICAL} {VAPOR} {DEPOSITION}, chemical vapour deposition, current density, current-gain cutoff frequency, Cutoff frequency, diffusion barriers, field effect transistors, gallium compounds, Gallium nitride, {GaN}, gate insulating layers, {HEMTs}, heterostructure field-effect transistor ({HFET}), heterostructure field effect transistors, {III}-V semiconductors, maximum oscillation frequency, {MIS} devices, {MIS}-{HFET}, {MODFETs}, passivation, passivation layers, {SAPPHIRE}, sapphire substrate, short channel effect, Silicon compounds, {SiN}, Transconductance, wide band gap semiconductors},
+	pages = {16--18},
+	file = {IEEE Xplore Abstract Record:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/SA4XW38V/abs_all.html:text/html;IEEE Xplore Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/55W3KXP7/Higashiwaki et al. - 2006 - AlGaNGaN MIS-HFETs with fT of 163 GHz using cat-C.pdf:application/pdf}
+}
+
+@incollection{voter_introduction_2007,
+	series = {{NATO} Science Series},
+	title = {Introduction to the Monte Carlo Method},
+	copyright = {©2007 Springer},
+	isbn = {978-1-4020-5293-4, 978-1-4020-5295-8},
+	url = {http://link.springer.com/chapter/10.1007/978-1-4020-5295-8_1},
+	abstract = {Monte Carlo refers to a broad class of algorithms that solve problems through the use of random numbers. They .rst emerged in the late 1940’s and 1950’s as electronic computers came into use [1], and the name means just what it sounds like, whimsically referring to the random nature of the gambling at Monte Carlo, Monaco. The most famous of the Monte Carlo methods is the Metropolis algorithm [2], invented just over 50 years ago at Los Alamos National Laboratory. Metropolis Monte Carlo (which is not the subject of this chapter) offers an elegant and powerful way to generate a sampling of geometries appropriate for a desired physical ensemble, such as a thermal ensemble. This is accomplished through surprisingly simple rules, involving almost nothing more than moving one atom at a time by a small random displacement. The Metropolis algorithm and the numerous methods built on it are at the heart of many, if not most, of the simulations studies of equilibrium properties of physical systems.},
+	number = {235},
+	urldate = {2014-11-21},
+	booktitle = {Radiation Effects in Solids},
+	publisher = {Springer Netherlands},
+	author = {Voter, Arthur F.},
+	editor = {Sickafus, Kurt E. and Kotomin, Eugene A. and Uberuaga, Blas P.},
+	month = jan,
+	year = {2007},
+	keywords = {Condensed Matter, Materials Science},
+	pages = {1--23},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/A5K42ZCN/Voter - 2007 - INTRODUCTION TO THE KINETIC MONTE CARLO METHOD.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/I5E3HJC5/978-1-4020-5295-8_1.html:text/html}
+}
+
+@article{battaile_kinetic_2008,
+	series = {Recent Advances in Computational Study of Nanostructures},
+	title = {The Kinetic Monte Carlo method: Foundation, implementation, and application},
+	volume = {197},
+	issn = {0045-7825},
+	shorttitle = {The Kinetic Monte Carlo method},
+	url = {http://www.sciencedirect.com/science/article/pii/S0045782508001254},
+	doi = {10.1016/j.cma.2008.03.010},
+	abstract = {The Kinetic Monte Carlo method provides a simple yet powerful and flexible tool for exercising the concerted action of fundamental, stochastic, physical mechanisms to create a model of the phenomena that they produce. This manuscript contains an overview of the theory behind the method, some simple examples to illustrate its implementation, and a technologically relevant application of the method to model the refinement of grains during polycrystalline thin film deposition. The objective is to provide an introduction to the method and its basics, and to present useful examples that might be followed to achieve its implementation for solving practical problems.},
+	number = {41–42},
+	urldate = {2014-11-21},
+	journal = {Computer Methods in Applied Mechanics and Engineering},
+	author = {Battaile, Corbett C.},
+	month = jul,
+	year = {2008},
+	keywords = {Grain growth, Monte Carlo, Simulation, Thin film, Vacancy diffusion},
+	pages = {3386--3398},
+	file = {ScienceDirect Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/NB4GJVCT/Battaile - 2008 - The Kinetic Monte Carlo method Foundation, implem.pdf:application/pdf;ScienceDirect Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/SSRSS8KJ/S0045782508001254.html:text/html}
+}
+
+@article{alder_studies_1959,
+	title = {Studies in Molecular Dynamics. I. General Method},
+	volume = {31},
+	issn = {0021-9606, 1089-7690},
+	url = {http://scitation.aip.org/content/aip/journal/jcp/31/2/10.1063/1.1730376},
+	doi = {10.1063/1.1730376},
+	abstract = {A method is outlined by which it is possible to calculate exactly the behavior of several hundred interacting classical particles. The study of this many‐body problem is carried out by an electronic computer which solves numerically the simultaneous equations of motion. The limitations of this numerical scheme are enumerated and the important steps in making the program efficient on the computers are indicated. The applicability of this method to the solution of many problems in both equilibrium and nonequilibrium statistical mechanics is discussed.},
+	number = {2},
+	urldate = {2014-11-21},
+	journal = {The Journal of Chemical Physics},
+	author = {Alder, B. J. and Wainwright, T. E.},
+	month = aug,
+	year = {1959},
+	keywords = {Classical statistical mechanics, Computer simulation, Computer software, Equations of motion, Molecular dynamics},
+	pages = {459--466},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/GZJF6HNG/Alder and Wainwright - 1959 - Studies in Molecular Dynamics. I. General Method.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/JVUCH5N9/1.html:text/html}
+}
+
+@article{abraham_computational_1986,
+	title = {Computational statistical mechanics methodology, applications and supercomputing},
+	volume = {35},
+	issn = {0001-8732},
+	url = {http://dx.doi.org/10.1080/00018738600101851},
+	doi = {10.1080/00018738600101851},
+	abstract = {Computer simulation is adding a new dimension to scientific investigation, establishing a role of equal importance with the traditional approaches of experiment and theory. In this paper, we provide a text for understanding the computer simulation methodology of classical statistical mechanics. After developing the theoretical basis of the simulation techniques, the Monte Carlo and Langevin methods and various molecular dynamics methods are described. A very limited discussion is provided on interatomic potential functions, numerical integration schemes, and general simulation procedures for modelling different physical situations and for circumventing excessive computational burdens. The simulation methods are then illustrated using a variety of physical problems studied over the last several years at our laboratory. They include spinodal decomposition of a two-dimensional (2D) fluid, the melting of 2D and quasi-2D films, the structure and energetics of an incommensurate physisorbed film, and the roughening of a silicon solid-melt interface. Finally, we discuss the supercomputer issue, both in terms of super problems for supercomputers and parallel architectures leading to near-future computers that will be one thousand times faster than those currently available.},
+	number = {1},
+	urldate = {2014-11-21},
+	journal = {Advances in Physics},
+	author = {Abraham, Farid F.},
+	month = jan,
+	year = {1986},
+	pages = {1--111},
+	file = {00018738600101851.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/IV5H876M/00018738600101851.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/FW3MQGG7/00018738600101851.html:text/html}
+}
+
+@book{hoover_computational_2012,
+	title = {Computational Statistical Mechanics},
+	isbn = {0444596593},
+	abstract = {Computational Statistical Mechanics describes the use of fast computers to simulate the equilibrium and nonequilibrium properties of gases, liquids, and solids at, and away from equilibrium. The underlying theory is developed from basic principles and illustrated by applying it to the simplest possible examples.Thermodynamics, based on the ideal gas thermometer, is related to Gibb's statistical mechanics through the use of Nosé-Hoover heat reservoirs. These reservoirs use integral feedback to control temperature. The same approach is carried through to the simulation and analysis of nonequilibrium mass, momentum, and energy flows. Such a unified approach makes possible consistent mechanical definitions of temperature, stress, and heat flux which lead to a microscopic demonstration of the Second Law of Thermodynamics directly from mechanics. The intimate connection linking Lyapunov-unstable microscopic motions to macroscopic dissipative flows through multifractal phase-space structures is illustrated with many examples from the recent literature.The book is well-suited for undergraduate courses in advanced thermodynamics, statistical mechanic and transport theory, and graduate courses in physics and chemistry.},
+	language = {en},
+	publisher = {Elsevier},
+	author = {Hoover, W. G.},
+	month = dec,
+	year = {2012},
+	keywords = {Science / Chemistry / General, Science / Chemistry / Physical \& Theoretical}
+}
