--- a/multilayer.tex
+++ b/multilayer.tex
@@ -25,7 +25,7 @@ Die PVD-Raten wurden so gewählt, dass einzelne Lagen mit einer Dicke von \SI{1}
 Abscheidungen von Lagen mit einer Dicke von \SI{5}{\nano\meter} wurden ebenfalls mit Parsivald simuliert, doch mangels verfügbarer Rechenzeit nicht eingehender untersucht.
 Anhang~\ref{appendix_multilayer} enthält neben diesen Systemen auch Darstellungen von strukturellen Fehlern, die bei der Fehleinstellung der Simulationsparameter von der Simulation verursacht werden können.
 
-Eine Untersuchung der Ergebnisse der Parsivald-Simulationen zeigt nach korrekter Parametereinstellung \todo{Joerg: hier sollte man vielleicht irgendwo mal erwähnen, dass das für dieses System erwartet ist? Eigentlich müsste man da was zu Mischbarkeit und Phasendiagramm der Legierungsbildung sagen ...}klar abgegrenzte epitaktische Atomlagen (Abbildungen~\ref{fig:multilayerresults}), die eine geringe Rauheit von \SI{1.2}{\angstrom} zeigen (Abbildung~\ref{fig:multilayerplots-a}), welche unterhalb der Bindungslängen liegt.
+Eine Untersuchung der Ergebnisse der Parsivald-Simulationen zeigt nach korrekter Parametereinstellung \todo{Joerg: hier sollte vielleicht irgendwo mal erwähnt werden, dass das für dieses System erwartet ist? Eigentlich müsste man da was zu Mischbarkeit und Phasendiagramm der Legierungsbildung sagen ...}klar abgegrenzte epitaktische Atomlagen (Abbildungen~\ref{fig:multilayerresults}), die eine geringe Rauheit von \SI{1.2}{\angstrom} zeigen (Abbildung~\ref{fig:multilayerplots-a}), welche unterhalb der Bindungslängen liegt.
 Bei Untersuchungen der Alpha-Form konnten weder Poren noch Hohlräume gefunden werden.
 Die Lagen zeigen jedoch bei geringeren Relaxationszeiten eine stärkere Durchmischung, wie in Abbildung~\ref{fig:multilayerplots-b} anhand der nach Schichthöhe aufgelösten Atomkonzentration ersichtlich ist.
 In der Simulation wird die Durchmischung durch eine Unterrelaxation verursacht, bei der sich das auftreffende Atom nicht weit genug auf der Oberfläche bewegen kann, um einen günstigen Ablagerungsort zu erreichen.
