--- a/contents.tex
+++ b/contents.tex
@@ -110,7 +110,7 @@ Parsivald & \multicolumn{2}{l}{Parallel Atomistic Reaction Simulator for Vapor a
   EU
   ACCELERATE
   MOSFETs
-  XXR - latex table definition
+  XXR, SI - latex table definitions
 \end{comment}%commented out for a reason
 
 \chapter*{Symbolverzeichnis}
