--- a/siliconpvd.tex
+++ b/siliconpvd.tex
@@ -94,7 +94,7 @@ Die Parametersätze \pot{chenoweth}, \pot{lg} und \pot{liu\_nitramines} können 
 \subsubsection{Kristalleigenschaften (c-\ce{Si})}
 
 Diese Untersuchungen sind identisch zu den Untersuchungen der Kristallstrukturen aus den vorherigen Abschnitten.
-Eine Parameterdatei gilt in dieser Hinsicht als erfolgreich, wenn eine Relaxierung der Kristallstruktur unterhalb der Schmelztemperatur von \SI{1687}{\kelvin}\cite{haynes_crc_2011} die Gittereigenschaften bewahrt, wofür die \todo{Diagramm mit den Dichten}Dichten und radialen Verteilungsfunktionen sowie die daraus gewonnenen \todo{Diagramm mit Koordinationszahlen und Bindungslängen}Koordinationszahlen und Bindungslängen verglichen werden.
+Eine Parameterdatei gilt in dieser Hinsicht als erfolgreich, wenn eine Relaxierung der Kristallstruktur unterhalb der Schmelztemperatur von \SI{1687}{\kelvin}\cite{haynes_crc_2011} die Gittereigenschaften bewahrt, wofür die Dichten und radialen Verteilungsfunktionen sowie die daraus gewonnenen Koordinationszahlen und Bindungslängen verglichen werden\todo{Tabelle aus Anhang HieR einfügen}.
 Dabei überwiegen die Formen der radialen Verteilungsfunktionen, die nach dem langsamen Herunterkühlen der erhitzten Struktur wieder kristalline Eigenschaften zeigen sollten.
 Dies geschieht allerdings nur bei \pot{kulkarni} und \pot{nielson}, wohingegen die anderen Parametrisierungen auch bei niedrigen \todo{wie niedrig waren die Experimente?}Temperaturen zu einer Verformung des Gitters hin zu amorphen Strukturen neigen.
 Detaillierte Informationen zu den Ergebnissen sind in Anhang~\ref{appendix_silicon} zu finden.
